	PR tree-optimization/68501 	* target.def (builtin_reciprocal): Replace the 3 arguments with 	a gcall * one, adjust description. 	* targhooks.h (default_builtin_reciprocal): Replace the 3 arguments 	with a gcall * one. 	* targhooks.c (default_builtin_reciprocal): Likewise. 	* tree-ssa-math-opts.c (pass_cse_reciprocals::execute): Use 	targetm.builtin_reciprocal even on internal functions, adjust 	the arguments and allow replacing an internal function with normal 	built-in. 	* config/i386/i386.c (ix86_builtin_reciprocal): Replace the 3 arguments 	with a gcall * one.  Handle internal fns too. 	* config/rs6000/rs6000.c (rs6000_builtin_reciprocal): Likewise. 	* config/aarch64/aarch64.c (aarch64_builtin_reciprocal): Likewise. 	* doc/tm.texi (builtin_reciprocal): Document.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@231075 138bc75d-0d04-0410-961f-82ee72b054a4